z-index fixes

--- a/app/styles/components/draw-overlay.scss
+++ b/app/styles/components/draw-overlay.scss
@@ -4,9 +4,9 @@
   left: 0px;
   width: 100%;
   height: 100%;
-  z-index: 800;
+  z-index: 99;
   background: $black-20;
-  
+
   &__drawing-area {
     position: absolute;
   }
