--- a/app/styles/components/mapbox-gl-map.scss
+++ b/app/styles/components/mapbox-gl-map.scss
@@ -1,3 +1,11 @@
+.mapboxgl-map {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  bottom: 0px;
+  right: 0px;
+}
+
 .map-navigation {
   position: absolute;
   top: 20px;
